# sim8

./: .gitignore  .gitmodules  CLAUDE.md  README.md
.claude/agents/: code-critic.md  formal-analyst.md  formal-engineer.md  implementation-engineer.md  naming-guide.md  spec-analyst.md  test-engineer.md
.claude/hooks/: format-on-save.sh
.claude/rules/: formal-tla.md  general-coding.md  multi-agent-protocol.md  naming.md  python-uv.md  spec-driven-workflow.md  web-build.md
.github/workflows/: build-vsix.yml  deploy-pages.yml
examples/: hello-mp-code.asm  hello-mp-data.asm  hello.asm  quadratic.asm
examples/bmp/: viewer_8bpp.asm
formal/: Makefile  cpu_base.tla  cpu_core.tla  cpu_ops_bit.tla  cpu_ops_fp.tla  cpu_ops_jump.tla  cpu_ops_mov.tla  cpu_ops_mul.tla  cpu_ops_stack.tla
formal/tests/: test_adversarial.cfg  test_adversarial.tla  test_arithmetic.cfg  test_arithmetic.tla  test_array_access.cfg  test_array_access.tla  test_associativity.cfg  test_associativity.tla  test_basic.cfg  test_basic.tla  test_bitwise.cfg  test_bitwise.tla  test_bitwise_carry.cfg  test_bitwise_laws.cfg  test_bitwise_laws.tla  test_call_reg.cfg  test_call_reg.tla  test_demorgan.cfg  test_div_zero.cfg  test_dp_paging.cfg  test_dp_paging.tla  test_fault_codes.cfg  test_fault_codes.tla  test_faults.cfg  test_faults.tla  test_fmov_rr.tla  test_fmov_rr_fault.tla  test_fp_arith.cfg  test_fp_arith.tla  test_fp_basic.cfg  test_fp_basic.tla  test_fp_control.cfg  test_fp_control.tla  test_fp_conversion.cfg  test_fp_fault_atomicity.cfg  test_fp_fault_atomicity.tla  test_fp_fb_min.cfg  test_fp_fb_min.tla  test_fp_fclass.cfg  test_fp_fclass_fault.cfg  (+61 more)
formal/tla/: .gitignore  Makefile  cpu_base.tla  cpu_core.tla  (+7 more)
isa/: codegen.py
mcp/: README.md  pyproject.toml
mcp/src/sim8_mcp/: __init__.py  server.py
mcp/tests/: test_server.py
pysim8/: README.md  pyproject.toml
pysim8/src/pysim8/: __init__.py  _isa_tables.py  constants.py  fp_arithmetic.py  fp_formats.py  isa.py  notebook.py
pysim8/src/pysim8/asm/: __init__.py  _codegen_core.py  _codegen_fp.py  _codegen_vu.py  _parser_operands.py  _parser_types.py  cli.py  codegen.py  parser.py  preprocess.py
pysim8/src/pysim8/disasm/: __init__.py  cli.py  core.py
pysim8/src/pysim8/kernel/: __init__.py  __main__.py  _kernel.py
pysim8/src/pysim8/sim/: __init__.py  _dispatch_config.py  alu.py  cpu.py  decoder.py  errors.py  handlers.py  handlers_fp.py  handlers_vu.py  memory.py  registers.py  tracing.py  tui.py  vu.py  vu_ops.py
pysim8/tests/: conftest.py  test_asm.py  test_asm_fp.py  test_asm_include.py  test_asm_page.py  test_cli.py  test_cross_fuzz.py  test_disasm.py  test_fp8_mldtypes.py  test_mem_usage.py  test_sim.py  test_sim_fp.py  test_sim_ieee754.py  test_sim_vu.py  test_sim_vu_gather_scatter.py  test_vu_ops.py
spec/: asm.md  cpu.md  errors.md  fp.md  isa.json  isa.md  mem.md  opcodes.md  spec.md  tests-fp.md  tests-vec.md  tests.md  uarch.md  vector.md
std/: io.asm  io.bf16.asm  io.common.asm  io.fp16.asm  io.fp32.asm  io.fp8e4.asm  io.fp8e5.asm  io.hex.asm  io.int.asm  io.o2.asm  io.q44.asm  io.str.asm
vscode-sim8/: README.md  eslint.config.mjs  language-configuration.json  package-lock.json  package.json
web/: .dependency-cruiser.js  .stylelintrc.json  asm.js  core.js  design.html  eslint.config.js  index.html  knip.config.js  knip.json  package-lock.json  package.json  playwright.config.js  sim.bundle.js  sim.css  sim.js  tailwind.config.js  vitest.config.js
(+126 files in other folders)
